# crewai-projects

./: README.md
demo_flow/: pyproject.toml
demo_flow/book/: README.md  pyproject.toml
demo_flow/book/src/book/: main.py
demo_flow/src/demo_flow/: main.py
demo_flow/src/demo_flow/crews/poem_crew/config/: tasks.yaml
src/latest/: crews.py
src/latest/config/: agents.yaml  tasks.yaml
