[project]
name = "book"
version = "0.1.0"
description = "book using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
]

[project.scripts]
kickoff = "book.main:kickoff"
run_crew = "book.main:kickoff"
plot = "book.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
